# SpectrumFitting

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  EndpointFit.cpp  FitRangeTest.cpp  RandomSpectra.cpp  Spectrum.cpp  Spectrum.h  ToyEndpoint.cpp
src/include/: CommonFuncs.h  CommonNumbers.h  FundamentalConstants.h  NuFitParams.h
